# raytracer

./: CMakeLists.txt  Canvas.cpp  Canvas.h  RaytracerWindow.cpp  RaytracerWindow.h  config.h.in  main.cpp  raytracer.kdev4  readme.md
cmake_modules/: FindSFML.cmake
include/: Assert.hpp  Barrier.hpp  Camera.hpp  Colour.hpp  Exceptions.hpp  Image.hpp  IntersectionInfo.hpp  LightSource.hpp  Path.hpp  Point.hpp  RandomGenerator.hpp  Ray.hpp  Raytracer.hpp  Scene.hpp  SceneLoader.hpp  SceneLoaderJson.hpp  Semaphore.hpp  Shape.hpp  Shapes.hpp  Surface.hpp  SurfaceDescription.hpp  ThreadPool.hpp  Transformation.hpp  Vector.hpp  Vector3.hpp
include/builders/: BuilderArgs.hpp  BuilderBase.hpp  CameraBuilder.hpp  Conversions.hpp  CustomShapeBuilder.hpp  ParamTypes.hpp  SceneBuilder.hpp  ShapeBuilder.hpp  SurfaceBuilder.hpp
include/geometry/: Point.hpp  PointBase.hpp  Quaternion.hpp  Ray.hpp  Transformation.hpp  Vector.hpp  VectorMath.hpp
include/graphics/: Colour.hpp  Image.hpp
include/shapes/: Box.hpp  Chmutov.hpp  Plane.hpp  Rectangle.hpp  Shape.hpp  Sphere.hpp
include/threading/: Barrier.hpp  Semaphore.hpp  ThreadPool.hpp
scenes/: chmutov-glass.json  cornell-box.json
src/: CMakeLists.txt  Canvas.h  Raytracer.cpp  RaytracerWindow.cpp  RaytracerWindow.h  main.cpp
src/shapes/: Box.cpp
test/: CMakeLists.txt  ShapeTest.cpp  VectorTest.cpp
